--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <title>Мой первый сайт</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./font.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap">
+        <link rel="stylesheet" href="./styles.css">
     </head>
 <body>
-    
+
 <header>
 
   <div>app.creation</div>
@@ -24,7 +27,9 @@
 
       <main>
 
-        <h1>Building an App Without Design Expertise?</h1>
+        <h1 class="title">
+          Building an App Without Design Expertise?
+        </h1>
         <p>I help tech startups design better digital product Without hiring a full-time designer</p>
         <button>Shedule free consultation</button>
 
@@ -33,5 +38,5 @@
     </section>
 
     </body>
-    
+
 </html>
